# parC

./: .gitignore  AGENTS.md  CLAUDE.md  CONFIG.md  README.md  app.py  app_restructure.md  parC.env  pyproject.toml  requirements.txt  todo.md
.agents/: morpheme_sequence.md
.devcontainer/: devcontainer.json
.plans/: broken_buttons.md  editor_state_lifecycle.md  feature_api.md  forms.md  inflection.md  morpheme_set.md  stage.md
config/features/: README.md  verb.yaml  verb_feature_combinations.yaml
config/inventory/: README.md  segments.yaml  tones.yaml
config/markers/: README.md  class_prefixes.yaml  ipfv_3person_obj_markers.yaml  ipfv_obj_markers.yaml
config/paradigms/: README.md  ipfv_it.yaml
config/parts_of_speech/: README.md  verb.yaml
config/patterns/: README.md  phonological_classes.yaml
config/rules/: README.md  tone_association.yaml  vowel_coalescence.yaml
config/schemas/: ContingentFeatureMarkers.json  FeatureCombinations.json  (+7 more)
data/: README.md  adverbs.csv  gold_paradigms.json  gold_verbs.csv  inflected_verb_forms.csv  nouns.csv  nouns.xlsx  nouns_excel_raw.csv  verb_paradigms.xlsx  verb_roots_final.csv  verb_roots_new.csv
deprecated/: app.py
doc/: grammar_modules.rst
frontend/: api.js  hub.js  index.html  inflect.js  parse.js  style.css
notebooks/: beam_search.ipynb  pynini.ipynb
notes/: lexical_feature_selection.md
plans/: fragmenting.md  jsoneditor.md  vscode-editor-poc.md
schemas/: Paradigm.json  Rules.json
scripts/: build_person_marking_exs.py  dataset_builder.py  noun_lexicon_builder.py  profile_beam_search.py  rewrite_asr_dataset.py  verb_lexicon_builder.py
src/: __init__.py  api.py  app.py  beam_search.py  cache.py  cache_decorators.py  cli.py  config_utils.py  constants.py  database.py  decorators.py  directory_picker.py  features.py  forms.py  fst.py  fst_helpers.py  fst_registry.py  fst_utils.py  glossing.py  ingest_elan.py  ingest_lexicon.py  launcher.py  lexicon.py  models.py  noun_forms.py  parser.py  phoneme_inventory.py  phonology.py  process_text.py  registry_utils.py  search.py  validation.py  verb_forms.py
static/: base.html  config.html  corpus.html  home.html
templates/: _fv_dropdown.html  _inflect_verb.html  _parse_verb.html  analyze.html  index.html  layout.html  paradigms.html  sentences.html
tests/: feature_regisry_test.py  feature_registry_test.py  forms_test.py  fst_registry_test.py  fst_test.py  glossing_test.py  grammar_registry_test.py  main_parser_test.py  marker_registry_test.py  morpheme_sequence_test.py  paradigm_registry_test.py  phonology_test.py  registry_test.py  search_test.py  transduction_tests.py  utils.py  web_inventory_test.py
(+294 files in other folders)
