[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parC"
version = "0.1.0"
description = "Toolkit for morphological transduction based on paradigms"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "tqdm",
  "wordfreq",
  "openpyxl",
  "pynini==2.1.6",
  "graphviz",
  "pydot",
  "pyyaml",
  "loguru",
  "pygments>=2.19.2",
  "ipykernel>=6.29.5",
  "pytest>=8.3.5",
  "jsonschema>=4.23.0",
  "dotenv>=0.9.9",
  "watchdog>=4.0.2",
  "streamlit>=1.40.1",
  "levenshtein>=0.25.1",
  "camel-converter>=3.1.2",
  "numba>=0.58.1",
]

[project.optional-dependencies]
dev = ["pytest", "ipykernel"]

[project.scripts]
tira = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.yaml", "*.yml", "*.json", "*.txt", "*.xlsx"]

[tool.setuptools.data-files]
"data/lexicon" = ["data/lexicon/*.csv"]
"data/test_cases" = [
  "data/test_cases/*.csv",
  "data/test_cases/*.yaml",
  "data/test_cases/*.json",
]
"data/sentences" = [
  "data/sentences/*.csv",
  "data/sentences/*.txt",
  "data/sentences/*.json",
]
"data/paradigms" = ["data/paradigms/*.yaml"]
"data/excel" = ["data/excel/*.xlsx", "data/excel/*.csv"]
"data/elan" = ["data/elan/*.csv"]
"data/rules" = ["data/rules/*"]
